2010-03-18  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	* flumotion/test/test_component_wms.py:
	* flumotion/test/test_component_wms.py (added):
	Reset asf parser after a successful pushsetup request.  See #8273.

2010-03-17  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/producers/wms/wms.py:
	Set to INFO log level client connect/disconnect messages and
	initial server port binding/connect.

2010-03-15  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/producers/wms/wms.py:
	Use correct Twisted API to get the push-id value from the
	cookie. Original coding broken on cookie headers that contained more
	than one value, for instance "push-id=0; my-key=foo".
	It has been observed in the field, that sometimes WMS sends headers
	with push-id specified multiple times and with other cookie keys (like
	the google tracker __utma key).

2010-03-04  Sébastien Merle  <sebastien@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	* flumotion/component/producers/wms/wms.xml:
	Do not save error dumps by default.
	Added a component property to enable it.

2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/muxers/asf/Makefile.am:
	* flumotion/component/muxers/asf/asf.xml:
	* flumotion/component/muxers/asf/wizard_gtk.py (added):
	Add a check for the fluasfmuxer so it can be used from the conversion
	Step (See pub:r8454)

2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/muxers/asf/asf.xml:
	Change asf muxer description in wizard
	Closes #6853

2009-12-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* env.in:
	Add flumotion's bin directory to the path so we can call flumotion from
	subprojects.